init samodzielna strona

--- a/samodzielnastrona.html
+++ b/samodzielnastrona.html
@@ -29,7 +29,7 @@
         <main>
             <div class="row">
                 <div class="col-12">
-                    <div id="pokazslajdow" class="carousel slide" data-ride="carousel">
+                    <div id="slideshow" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
                             <img class="d-block w-100" src="laptop-1209008_1280.jpg" alt="Pierwszy slajd">
@@ -41,11 +41,11 @@
                             <img class="d-block w-100" src="smartphone-1894723_1920.jpg" alt="Trzeci slajd">
                           </div>
                         </div>
-                        <a class="carousel-control-prev" href="#pokazslajdow" role="button" data-slide="prev">
+                        <a class="carousel-control-prev" href="#slideshow" role="button" data-slide="prev">
                           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                           <span class="sr-only">Poprzedni</span>
                         </a>
-                        <a class="carousel-control-next" href="#pokazslajdow" role="button" data-slide="next">
+                        <a class="carousel-control-next" href="#slideshow" role="button" data-slide="next">
                           <span class="carousel-control-next-icon" aria-hidden="true"></span>
                           <span class="sr-only">Następny</span>
                         </a>
